fixed api route
