# src/routes/swagger.js
@@ -2,7 +2,7 @@ const router = require('express').Router();
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('.../swagger.json');
 
-router.use('/api-docs', swaggerUi.serve);
-router.use('/api-docs', swaggerUi.setup(swaggerDocument));
+router.use('/', swaggerUi.serve);
+router.get('/api-docs', swaggerUi.setup(swaggerDocument));
 
-module.exports = router
+module.exports = router;
